--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -10,6 +10,7 @@ body {
 	padding: 0;
 	color: #000;
 	font-size:12px;
+	background: url(../img/bg.png) repeat-x top;
 }
 
 ul, ol, dl { 
@@ -77,7 +78,7 @@ td:not(:first-child){
 
 .content {
 	padding: 10px;
-	width: 100%;
+	width: 95%;
 	float: left;
 	overflow:hidden;	
 	
@@ -85,8 +86,8 @@ td:not(:first-child){
 
 .tophead {
 	width:100%;
-	height:150px;
-	background-color:#CCF;
+	height:235px;
+	background-image:url('../img/head.png');
 	overflow:hidden;
 	clear:both;
 	border-radius:5px;
@@ -95,15 +96,22 @@ td:not(:first-child){
 #sitename {
 	clear: none;
 	float: left;
-	width: 450px;
-	margin-top: 40px;
+	display:block;
+	width: 250px;
+		
 	font-size:18px;
-	margin-bottom:20px;
+	
 }
 
 #sitename a {
 	text-decoration:none;
 	font-size:18px;	
+	display:block;
+	width:110px;
+	height:36px;
+	margin-top: 78px;
+	margin-left:18px;
+	text-align:center;
 }
 
 #sitename a:hover {
@@ -112,22 +120,29 @@ td:not(:first-child){
 }
 
 #welcome  {
-	width:200px;
-	margin: 20 10px;
+	width:350px;
+	margin-top:47px;
+	padding-top:20px;
+	text-align:center;
+	background-color:##1e557d;
+	border: 2px solid white;
+	border-radius:5px;
 	float:left;
 	font-size:16px;
-	color:#F30;
-	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	color:yellow;
+	
 	}
 
-#logout  {
+#logout a {
 width:100px;
 float:right;
+margin-top:50px;
 height:30px;
-border:1px solid black;
-background-color:#FFF;	
+border:1px solid white;
 border-radius:5px;
+padding-top:9px;
 text-align:center;
+color:yellow;
 clear:right;	
 
 }
@@ -143,38 +158,61 @@ clear:right;
 }
 
 #ulmenu  {
-	padding:10px;
-	display:inline;
+	height:236px;
+	list-style:none;
+	padding-left:228px;
 }
 
 #ulmenu li  {
 	
-	list-style:none;
-	font-size:16px;
-	font-weight:bold;
-	font-color:black;
+	font-size: 1.2em;
+	line-height: 1.3;
 
-	display:inline;
-	vertical-align:bottom;
-	border-right: 1px solid #333;
-	border-left: 2px solid #fff;
+	
 /* 	border-bottom: 1px solid  #666;
 	border-top: 1px solid  #666; */
-	text-decoration:none;
-	padding:10px 20px;
+
 }
 
-#ulmenu li a, a:visited {
-	color:black;
-	text-decoration:none;
-	margin:10px 20px;
-	
+#ulmenu li a {
+			display: block;
+			width: 114px;
+			float: left;
+			margin-top: 35px;
+			text-align:center;
+			color: white;
+			font-weight: bold;
+			text-decoration: none;
+			z-index:1111;
+			}
+
+#ulmenu li a:HOVER, #ulmenu li a:ACTIVE{
+				color:yellow;
+				}
+				
+#ulmenu li.active {
+				color:yellow;
+				}
+
+
+#intcontent  {
+width:98%;
+margin:0 auto;
+
 }
 
 .buttons {
 	margin: 10px;	
 }
 
+.paginator {
+	width:98%;
+	
+	margin:0 auto;
+	text-align: center;
+	font-size: medium;
+	display:block;
+}
 .onebutton  {
 	border: 1px solid #DDD;
 	border-radius: 3px;
