--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -3,6 +3,7 @@ body {font: 100%/1.4 Lucida Grande, Arial, Helvetica, sans-serif;
 	padding: 0;
 	color: #000;
 	font-size:12px;
+	background: url(../img/bg2.png) repeat-x top;
 	
 }
 
@@ -17,7 +18,8 @@ h1, h2, h3, h4, h5, h6, p {
 	padding-left: 15px; 
 }
 h1 {
-	font-size:20pt;
+	font-size:18pt;
+	color:#036;
 }
 a img { 
 	border: none;
@@ -37,7 +39,7 @@ a:hover, a:active, a:focus {
 
 .container {
 	display:block;
-	width: 850px;
+	width: 950px;
 	background: #FFF;
 	margin: 0 auto; 
 	overflow:hidden;
@@ -55,7 +57,7 @@ a:hover, a:active, a:focus {
 	display:block;
 	text-align:center;
 	padding: 10px;
-	width: 680px;
+	width: 780px;
 	float: left;
 	clear:right;
 /* 	overflow-y:scroll; */ 
@@ -101,18 +103,38 @@ a:hover, a:active, a:focus {
 
 .tophead {
 	width:100%;
-	height:103px;
+	height:235px;
 	background-color:#CCF;
 	overflow:hidden;
 	clear:both;
 	border-radius:5px;	
+	background:url("../img/hea.png") no-repeat;
 }
 
 #sitename {
 	clear: none;
 	float: left;
 	width: 300px;
+	margin-top:75px;
+	margin-left:85px;
 	
+}
+
+#sitename a {
+	color:#036;
+	text-decoration:none;
+	}
+
+#sitename a:hover  {
+	color:#039;
+	text-decoration:none;
+	}
+
+#wrapcenter  {
+	text-align:center;
+	width:122px;
+	float:left;
+	margin-left:7px;
 }
 
 .searchtable {
@@ -122,15 +144,28 @@ a:hover, a:active, a:focus {
 #logindiv {
 	height:auto;
 	overflow:hidden;
-	width:300px;
+	width:200px;
 	padding:5px;
-	border: 1px solid #fff;
+	border: 1px solid yellow;
 	border-radius:5px;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
 	float:right;
 	clear:right;
 	text-align: right;
-	margin:7px;
+	margin-top:70px;
 	
+}
+#logindiv input  {
+	border-radius:3px;
+	-webkit-border-radius:3px;
+	-moz-border-radius:3px;
+	width:100px;
+	margin-bottom:4px;
+}
+
+#logindiv label  {
+	margin-right:10px;	
 }
 
 .topsort {
@@ -210,6 +245,10 @@ a:hover, a:active, a:focus {
 	text-align: center;
 	font-size: medium;
 	
+}
+
+.breadcrumbs a {
+margin-left:10px;	
 }
 
 /* #books{
