--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -1,4 +1,5 @@
-body {font: 100%/1.4 Lucida Grande, Arial, Helvetica, sans-serif;
+body {
+	font: 100%/1.4 Lucida Grande, Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
 	color: #000;
@@ -53,6 +54,7 @@ a:hover, a:active, a:focus {
 	padding-bottom: 10px;
 	
 }
+
 .content {
 	display:block;
 	text-align:center;
@@ -170,15 +172,14 @@ a:hover, a:active, a:focus {
 
 .topsort {
 	background-color: #CCC;
+	cursor: pointer;
 }
 
 #searchdiv {
-	
 	width:100%;
 	min-width:780px;
 	display:inline;
 	overflow:hidden;
-		
 }
 
 #search {
@@ -197,7 +198,6 @@ a:hover, a:active, a:focus {
 #searchinput: {
 	width:75%;	
 }
-
 
 #nav ul {
 	margin: 0; 
@@ -247,15 +247,148 @@ a:hover, a:active, a:focus {
 	
 }
 
-.breadcrumbs a {
-margin-left:10px;	
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-/* #books{
-	display: block;
-	height:100px;
-	width: 100%;
-	
+ #breadcrumbs{
+  overflow: hidden;
+  width: 100%;
+}
+
+#breadcrumbs li{
+  float: left;
+  margin: 0 .5em 0 1em;
+}
+
+#breadcrumbs a{
+  background: #ddd;
+  padding: .7em 1em;
+  float: left;
+  text-decoration: none;
+  color: #444;
+  text-shadow: 0 1px 0 rgba(255,255,255,.5); 
+  position: relative;
+}
+
+#breadcrumbs a:hover{
+  background: #99db76;
+}
+
+#breadcrumbs a::before{
+  content: "";
+  position: absolute;
+  top: 50%; 
+  margin-top: -1.5em;   
+  border-width: 1.5em 0 1.5em 1em;
+  border-style: solid;
+  border-color: #ddd #ddd #ddd transparent;
+  left: -1em;
+}
+
+#breadcrumbs a:hover::before{
+  border-color: #99db76 #99db76 #99db76 transparent;
+}
+
+#breadcrumbs a::after{
+  content: "";
+  position: absolute;
+  top: 50%; 
+  margin-top: -1.5em;   
+  border-top: 1.5em solid transparent;
+  border-bottom: 1.5em solid transparent;
+  border-left: 1em solid #ddd;
+  right: -1em;
+}
+
+#breadcrumbs a:hover::after{
+  border-left-color: #99db76;
+}
+
+#breadcrumbs .current,
+#breadcrumbs .current:hover{
+  font-weight: bold;
+  background: none;
+}
+
+#breadcrumbs .current::after,
+#breadcrumbs .current::before{
+  content: normal;
+}
+
+/* #breadcrumbs{
+  background: #eee;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #f5f5f5 #e5e5e5 #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 2px rgba(0,0,0,.2);
+  overflow: hidden;
+  width: 100%;
+}
+
+#breadcrumbs li{
+  float: left;
+}
+
+#breadcrumbs a{
+  padding: .7em 1em .7em 2em;
+  float: left;
+  text-decoration: none;
+  color: #444;
+  position: relative;
+  text-shadow: 0 1px 0 rgba(255,255,255,.5);
+  background-color: #ddd;
+  background-image: linear-gradient(to right, #f5f5f5, #ddd);  
+}
+
+#breadcrumbs li:first-child a{
+  padding-left: 1em;
+  border-radius: 5px 0 0 5px;
+}
+
+#breadcrumbs a:hover{
+  background: #fff;
+}
+
+#breadcrumbs a::after,
+#breadcrumbs a::before{
+  content: "";
+  position: absolute;
+  top: 50%;
+  margin-top: -1.5em;   
+  border-top: 1.5em solid transparent;
+  border-bottom: 1.5em solid transparent;
+  border-left: 1em solid;
+  right: -1em;
+}
+
+#breadcrumbs a::after{ 
+  z-index: 2;
+  border-left-color: #ddd;  
+}
+
+#breadcrumbs a::before{
+  border-left-color: #ccc;  
+  right: -1.1em;
+  z-index: 1; 
+}
+
+#breadcrumbs a:hover::after{
+  border-left-color: #fff;
+}
+
+#breadcrumbs .current,
+#breadcrumbs .current:hover{
+  font-weight: bold;
+  background: none;
+}
+
+#breadcrumbs .current::after,
+#breadcrumbs .current::before{
+  content: normal;  
 } */
 
 #nav ul { 
@@ -264,13 +397,17 @@ margin-left:10px;
     list-style: none; 
     width: 150px; 
     border-bottom: 1px solid #fff; 
-    }
-#nav li:hover ul { display: block; }
+}
+
+#nav li:hover ul { 
+	display: block;
+	z-index: 2; 
+}
+
 #nav li:hover ul, li.over ul {    
-    display: block;    
-         }
-		 
-		 
+    display: block;
+}
+
 #welcome  {
 	font-size: 19px;	
 	font-weight:bold;
@@ -283,25 +420,68 @@ margin-left:10px;
 	font-weight:bold;
 }
 
-#logout  a {
-		
+#logout  a {		
 	font-size: 18px;	
 	font-weight:bold;
 }
 
 .onebutton a {
-text-decoration: none;
-padding:4px;	
+	text-decoration: none;
+	padding:4px;	
 }
 .centeralign  {
-text-align: center;
-margin-top:7px;	
+	text-align: center;
+	margin-top:7px;	
 }
 
+.rate {
+	font-size: xx-large;
+	color: grey;
+}
 
-</style>[if lte IE 7]>
-<style>
-.content { margin-right: -1px; } 
-ul.nav a { zoom: 1; }  
-</style>
-<![endif]</head>
+.rateUp, .rateDown {
+	display: block;
+	cursor: pointer;
+}
+
+.rateUp a, .rateDown a {
+	text-decoration:none;
+}
+#wrapCats  {
+border:none;
+margin-top:10px;
+width:100%;
+position:relative;
+height:100%;
+vertical-align:middle;
+	
+}
+
+#alignCats  {
+	margin-top:6px;
+	
+}
+
+.cats  a{
+width:400px;
+height:30px;
+margin:0 auto;
+
+color:#444;
+
+font-size:15px;
+display: block; 
+    text-decoration:none;    
+    padding-top: 10px; 
+    border: 1px solid #ccc; 
+    border-bottom: 1px solid #fff;
+	
+	background-image: linear-gradient(bottom, rgb(179,201,219) 46%, rgb(216,230,230) 60%);
+	background-image: -o-linear-gradient(bottom, rgb(179,201,219) 46%, rgb(216,230,230) 60%);
+	background-image: -moz-linear-gradient(bottom, rgb(179,201,219) 46%, rgb(216,230,230) 60%);
+	background-image: -webkit-linear-gradient(bottom, rgb(179,201,219) 46%, rgb(216,230,230) 60%);
+	background-image: -ms-linear-gradient(bottom, rgb(179,201,219) 46%, rgb(216,230,230) 60%);
+	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.46, rgb(179,201,219)),color-stop(0.6, rgb(216,230,230)));	
+	
+	
+}
